@@ -100,8 +100,6 @@ void ProgramOptions::load()
 	mainWindowWidth = settings.value("configuration/mainWindowWidth", mainWindowWidth).toInt();
 	mainWinowMaximized = settings.value("configuration/mainWinowMaximized", mainWinowMaximized).toBool();
 
-	vistaUpdatesMessage = settings.value("configuration/vistaUpdatesMessage", vistaUpdatesMessage).toBool();
-
 	emit optionsLoadAfter();
 }
 
@@ -165,8 +163,6 @@ void ProgramOptions::save()
 	settings.setValue("mainWindowWidth", mainWindowWidth);
 	settings.setValue("mainWinowMaximized", mainWinowMaximized);
 
-	settings.setValue("vistaUpdatesMessage", vistaUpdatesMessage);
-
 	settings.endGroup();
 
 	emit optionsSaveAfter();
@@ -178,7 +174,13 @@ void ProgramOptions::setDefault()
 #ifdef Q_WS_MAC
 	downloadDir = QString(QDir::homePath() + DEFAULT_DOWNLOADS);
 #else
+#ifdef Q_OS_LINUX
+	QString _homeDirectory  = getenv("HOME");
+	downloadDir = QString(_homeDirectory + DEFAULT_DOWNLOADS);
+	// modification made by "AzalSup"
+#else
 	downloadDir = QString(appDir.absolutePath() + DEFAULT_DOWNLOADS);
+#endif
 #endif
 	convertVideos = true;
 	deleteVideosOnConvert = true;
@@ -233,8 +235,6 @@ void ProgramOptions::setDefault()
 	mainWindowHeight = 0;
 	mainWindowWidth = 0;
 	mainWinowMaximized = false;
-
-	vistaUpdatesMessage = false;
 }
 
 void ProgramOptions::setCanSendUpdateSignal(bool canSendUpdateSignal)
@@ -615,14 +615,4 @@ void ProgramOptions::setMainWinowMaximized(bool value)
 bool ProgramOptions::getMainWinowMaximized()
 {
 	return mainWinowMaximized;
-}
-
-void ProgramOptions::setVistaUpdatesMessage(bool value)
-{
-	vistaUpdatesMessage = value;
-}
-
-bool ProgramOptions::getVistaUpdatesMessage()
-{
-	return vistaUpdatesMessage;
 }
